[project]
name = "hj-global-opt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.14.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "sklearn-pandas>=2.2.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
